--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
   src: url("../fonts/ProximaNovaRegular.otf") format("opentype");
   font-weight: 400;
 }
-.footer__icons__link, .footer__menu__link, .download__cart__link, .download__cart li a span, .header__menu__li__link, .header__menu li {
+.footer__icons__link, .footer__menu__link, .download__cart__link, .download__cart li a span, .header__ru_none .header__en__link, .header__menu__li__link, .header__menu li {
   transition: all 0.2s linear;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
@@ -373,7 +373,7 @@ body {
   top: 100% !important;
   left: 0 !important;
   background: #fff;
-  padding: 5px;
+  height: auto;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.12);
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -383,7 +383,14 @@ body {
 }
 .header__ru_none .header__en__link {
   color: #212529;
+  padding: 5px;
   font-weight: 500;
+  display: inline-block;
+  width: 100%;
+}
+.header__ru_none .header__en__link:hover {
+  background-color: #5086EA;
+  color: #fff;
 }
 .header__ru_cart {
   display: flex;
