--- a/sass/index.scss
+++ b/sass/index.scss
@@ -129,16 +129,26 @@ body{
         top: 100% !important;
         left: 0 !important;
         background: $link;
-        padding: 5px;
+        height: auto;
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.12);
         border-radius: 5px;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         -ms-border-radius: 5px;
         -o-border-radius: 5px;
+
         .header__en__link{
             color:#212529;
+            padding: 5px;
             font-weight: 500;
+            display: inline-block;
+            width: 100%;
+            @extend%transition;
+
+            &:hover{
+                background-color:$blue;
+                color:$link;
+            }
         }
     }
 
