--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,6 +4,7 @@
 @import "_members.scss";
 @import "_meeting.scss";
 @import "_meeting_in.scss";
+@import "_animation.scss";
 
 
 body{
@@ -17,6 +18,21 @@ body{
     margin: 0 auto;
     box-sizing: border-box;
 }
+
+// animation start
+
+.animation{
+    background-color:rgb(26,43,73,63%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000;
+    width: 100%;
+    height: 100%;
+}
+
+// animation end
+
 
 
 // header start
